Correct typo in the jupyter notebook

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### USE CASE 3: Rank by parking occupancy\n",
+    "### USE CASE 3: Rank by recommendation\n",
     "   (mode=3)"
    ]
   },
